--- a/app/style.css
+++ b/app/style.css
@@ -63,6 +63,21 @@ table {
 .h1 {
   font-size: 2em;
 }
+.h2 {
+  font-size: 1.7em;
+}
+.h3 {
+  font-size: 1.4em;
+}
+.h4 {
+  font-size: 1em;
+}
+.h5 {
+  font-size: 0.9em;
+}
+.h6 {
+  font-size: 0.8em;
+}
 .colorBlack {
   color: #484848;
 }
