--- a/app/style.css
+++ b/app/style.css
@@ -27,7 +27,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-	font-size: 14px;
+	font-size: 16px;
   min-width: 360px;
 }
 ol, ul {
@@ -74,11 +74,14 @@ table {
   width: 100%;
 }
 /* font */
+.p {
+  font-size: 1em;
+}
 .h1 {
-  font-size: 2em;
+  font-size: 2.8em;
 }
 .h2 {
-  font-size: 1.7em;
+  font-size: 2em;
 }
 .h3 {
   font-size: 1.4em;
@@ -113,6 +116,9 @@ table {
 .colorGrey {
   color: #808080;
 }
+.textAlignCenter {
+  text-align: center;
+}
 
 /* Background */
 .backgroundColorGreen {
@@ -139,14 +145,19 @@ table {
   padding-bottom: 1em;
 }
 .paddingLeftBig {
-  padding-left: 2em;
+  padding-left: 2.5em;
 }
 .paddingRightBig {
-  padding-right: 2em;
+  padding-right: 2.5em;
 }
 .paddingTopBig {
-  padding-top: 2em;
+  padding-top: 2.5em;
 }
 .paddingBottomBig {
-  padding-bottom: 2em;
+  padding-bottom: 2.5em;
+}
+
+/* Borders */
+.borderBottomGrey {
+  border-bottom: 1px solid #484848;
 }
