--- a/app/style.css
+++ b/app/style.css
@@ -63,6 +63,9 @@ table {
 .flexNoShrink {
   flex-shrink: 0;
 }
+.flexDirectionColumn {
+  flex-direction: column;
+}
 .flexJustifySpaceBetween {
   justify-content: space-between;
 }
@@ -83,6 +86,9 @@ table {
 }
 .width100 {
   width: 100%;
+}
+.height100 {
+  height: 100%;
 }
 .width50 {
   width: 50%;
@@ -157,6 +163,9 @@ table {
 }
 .backgroundColorBlack {
   background-color: #232323;
+}
+.backgroundColorYellow {
+  background-color: #f8f2c5;
 }
 .backgroundColorGrey {
   background-color: #e7e7e7;
